Fixed slideshow page shift.

--- a/style.css/main.css
+++ b/style.css/main.css
@@ -272,11 +272,20 @@ iframe {
   align-items: center;
   justify-content: center;
   text-align: center;
+  height: 30vh;
+}
+
+.slideshow-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 /* Hide the images by default */
 .mySlides {
   display: none;
+  width: 100%;
+  height: 100%;
 }
 
 /* Number text (1/3 etc) */
@@ -348,6 +357,10 @@ iframe {
 
 /* Desktop Styles */
 @media (min-width: 767px) {
+  .slideshow-container {
+    height: 50vh;
+  }
+
   /* set image as background & center the headline */
   .header {
     position: relative;
